# PoopyPooOS-UEFI

./: Cargo.toml  README.md  build.rs  ramdisk
kernel/: Cargo.toml
kernel/src/: acpi.rs  config.rs  framebuffer.rs  framebufferv2.rs  gdt.rs  graphics.rs  interrupts.rs  main.rs  memory.rs  power.rs  rng.rs  rtc.rs  serial.rs
kernel/src/image/: mod.rs  png.rs  renderer.rs
kernel/src/memory/: allocator.rs  memory.rs
kernel/src/task/: executor.rs  mod.rs
