[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.7"
embedded-graphics = "0.8.1"
log = { version = "0.4.17", default-features = false }
bootloader-x86_64-common = "0.11.3"
conquer-once = { version = "0.4.0", default-features = false }
x86_64 = "0.14.2"
spin = "0.9.8"
uart_16550 = "0.3.0"
pic8259 = "0.10.1"
uefi = { version = "0.27.0", features = ["alloc", "global_allocator", "logger"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"