[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.7"
log = { version = "0.4.17", default-features = false }
bootloader-x86_64-common = "0.11.3"
conquer-once = { version = "0.4.0", default-features = false }
x86_64 = "0.14.2"
spin = "0.9.8"
uart_16550 = "0.3.0"
pic8259 = "0.10.1"
linked_list_allocator = "0.10.5"
png-decoder = "0.1.1"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]